fixing minor alignment issues

--- a/ui/packages/ui/src/app/pages/createConnector/connectorSteps/ConfigureConnectorTypeComponent.css
+++ b/ui/packages/ui/src/app/pages/createConnector/connectorSteps/ConfigureConnectorTypeComponent.css
@@ -3,6 +3,9 @@
     background: none;
   }
 }
+.connector-name-form{
+  padding: 8px 16px;
+}
 .dbz-c-accordion {
   font-weight: bold;
   font-size: var(--pf-global--FontSize--lg);
@@ -16,7 +19,6 @@
     margin-bottom: var(--pf-global--spacer--lg);
   }
 }
-
 .configure-connector-type-form {
   &-grouping {
     margin-top: 30px;
